--- a/style.css
+++ b/style.css
@@ -3,8 +3,66 @@ html, body {
   width: 100%;
 }
 
+button {
+  height: 60px;
+  width: 60px;
+  margin: 4px 4px 4px 4px;
+  font-size: 20px;
+}
+
 .calc-body {
-  width: 400px;
-  height: 400px;
+  height: 340px;
+  width: 280px;
+  padding: 40px 40px 40px 40px;
   background-color: lightgray;
+}
+
+.display {
+  display: flex;
+  height: 58px;
+  width: 195px;
+  margin: 5px;
+  background-color: lightcyan;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.row {
+  display: flex;
+}
+
+#clears {
+  color: steelblue;
+  font-weight: bold;
+  font-size: 25px;
+}
+#divides {
+  color: seagreen;  
+  font-weight: bold;
+  font-size: 30px;
+}
+#multiplies {
+  color: indianred;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+#subtracts {
+  color: mediumpurple;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+#adds {
+  color: darkgoldenrod;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+#equals {
+  color: cornflowerblue;
+  font-weight: bold;
+  font-size: 30px;
 }
